--- a/src/style/Main.scss
+++ b/src/style/Main.scss
@@ -5,9 +5,11 @@
 
   .SiteHead {
     position: relative;
-    display: inline-block;
-    height: 130px;
+    display: flex;
+    height: 200px;
     width: 100%;
+    align-items: center;
+    justify-content: center;
 
     .SiteName {
       display: flex;
@@ -16,15 +18,17 @@
       border: black solid 1px;
       position: absolute;
       left: 7%;
-      top: 50%;
+      //top: 50%;
       height: 52px;
       width: 228px;
     }
     .Input {
       border: black solid 1px;
       position: absolute;
-      top: 50%;
-      left: 30%;
+      //margin-inline: 55px;
+      height: 52px;
+      //top: 50%;
+      left: 31%;
 
       .InputBar {
         margin: 1px;
@@ -44,7 +48,7 @@
       display: flex;
       align-items: center;
       height: 54px;
-      top: 50%;
+      //top: 50%;
       left: 77%;
       position: absolute;
 
@@ -55,26 +59,52 @@
       }
     }
     .GoogleLoginButton {
-      top: 53%;
-      right: 8%;
-      position: absolute;
-    }
-    .GoogleLogoutButton {
-      top: 53%;
+      //top: 53%;
       right: 8%;
       position: absolute;
     }
   }
 
-  .SearchPager {
-    text-align: center;
-    height: 20px;
+  .SiteBody {
+    .Mypage {
+      border: black solid 1px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      margin-top: 20px;
+      margin-left: 20px;
+      margin-right: 20px;
+      margin-bottom: 10px;
+      padding-top: 10px;
+      padding-bottom: 10px;
 
-    .SearchPageButton {
-      width: 24px;
-      height: 22px;
-      margin: 2px;
-      padding: 0px;
+      .GoogleLogoutButton {
+      }
+    }
+    .SearchList {
+      border: black solid 1px;
+      text-align: left;
+      margin-top: 20px;
+      margin-left: 20px;
+      margin-right: 20px;
+      margin-bottom: 10px;
+      padding-top: 10px;
+      padding-bottom: 10px;
+      padding-inline: 20px;
+
+      list-style-type: none;
+    }
+    .SearchPager {
+      text-align: center;
+      height: 20px;
+
+      .SearchPageButton {
+        width: 24px;
+        height: 22px;
+        margin: 2px;
+        padding: 0px;
+      }
     }
   }
 }
