add region selector in search
need debugging

--- a/src/style/Main.scss
+++ b/src/style/Main.scss
@@ -63,6 +63,11 @@
       right: 8%;
       position: absolute;
     }
+    .SearchRegionSelector {
+      position: absolute;
+      top: 65%;
+      left: 31%;
+    }
   }
 
   .SiteBody {
