--- a/src/style/Main.scss
+++ b/src/style/Main.scss
@@ -67,33 +67,23 @@
       position: absolute;
       top: 65%;
       left: 31%;
+
+      .RegionResetButton {
+        position: absolute;
+        top: 42px;
+        right: -60px;
+      }
     }
   }
 
   .SiteBody {
-    .Mypage {
-      border: black solid 1px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      flex-direction: column;
-      margin-top: 20px;
-      margin-left: 20px;
-      margin-right: 20px;
-      margin-bottom: 10px;
-      padding-top: 10px;
-      padding-bottom: 10px;
-
-      .GoogleLogoutButton {
-      }
-    }
     .SearchList {
       border: black solid 1px;
       text-align: left;
       margin-top: 20px;
       margin-left: 20px;
       margin-right: 20px;
-      margin-bottom: 10px;
+      //margin-bottom: 10px;
       padding-top: 10px;
       padding-bottom: 10px;
       padding-inline: 20px;
@@ -102,7 +92,7 @@
     }
     .SearchPager {
       text-align: center;
-      height: 20px;
+      //height: 20px;
 
       .SearchPageButton {
         width: 24px;
