--- a/src/style/BookList.scss
+++ b/src/style/BookList.scss
@@ -2,7 +2,8 @@
   border: black solid 1px;
   display: flex;
   //height: 132px;
-  align-items: center;
+  //align-items: center;
+  align-items: flex-start;
 
   .BookImg {
     max-width: 82px;
