fix bug add map
fix region select bug
add map in library info section

--- a/src/style/BookList.scss
+++ b/src/style/BookList.scss
@@ -24,6 +24,21 @@
       display: flex;
       justify-content: space-between;
 
+      .Library {
+        width: 945px;
+        display: flex;
+        justify-content: space-between;
+        border-bottom: solid black 1px;
+        padding-bottom: 30px;
+
+        .LibAddress {
+          -moz-user-select: text;
+          -webkit-user-select: text;
+          -ms-user-select: text;
+          user-select: text;
+        }
+      }
+
       .LibraryDetailInfo {
         //margin-top: px;
         margin-left: 100px;
