디자인 추가

--- a/src/style/BookList.scss
+++ b/src/style/BookList.scss
@@ -1,9 +1,6 @@
 .BookInfoBox {
-  border: black solid 1px;
   display: flex;
-  //height: 132px;
-  //align-items: center;
-  width: 1198px;
+  width: 1200px;
   align-items: flex-start;
 
   .BookImg {
@@ -11,26 +8,24 @@
     margin-left: 2px;
     margin-right: 5px;
   }
-  .BookImgTable {
-    width: 92px;
-  }
 
   .BookDetailInfo {
     margin-top: 20px;
     padding-inline: 50px;
-    //text-align: center;
 
     .LibraryInfo {
       margin-top: 30px;
       display: flex;
-      justify-content: space-between;
+      justify-content: center;
+      flex-direction: column;
+
+      .accordion-item {
+        width: 1098px;
+      }
 
       .Library {
-        width: 945px;
         display: flex;
         justify-content: space-between;
-        border-bottom: solid black 1px;
-        padding-bottom: 30px;
 
         .LibAddress {
           -moz-user-select: text;
@@ -38,11 +33,6 @@
           -ms-user-select: text;
           user-select: text;
         }
-      }
-
-      .LibraryDetailInfo {
-        //margin-top: px;
-        margin-left: 100px;
       }
     }
   }
