--- a/src/style/App.scss
+++ b/src/style/App.scss
@@ -1,2 +1,10 @@
 .App {
+  background-color: #f5f5f5;
+
+  .css-kt6w9b {
+    display: block;
+    margin: auto;
+    margin-top: 10px;
+    margin-bottom: 10px;
+  }
 }
