--- a/src/style/BestsellerList.scss
+++ b/src/style/BestsellerList.scss
@@ -1,17 +1,27 @@
 .BestsellerList {
-  border: black solid 1px;
+  background-color: #f5f5f6;
   text-align: left;
-  margin-top: 20px;
   margin-left: 20px;
   margin-right: 20px;
+  margin-top: 10px;
   margin-bottom: 10px;
-  padding-top: 10px;
+  border-top: #e1e2e1 solid 10px;
+  padding-top: 20px;
   padding-bottom: 10px;
   padding-inline: 20px;
 
   list-style-type: none;
 
+  .tab {
+    padding-inline: 5px;
+    padding-bottom: 3px;
+  }
+
   .GenreSelected {
     font-weight: bold;
+    cursor: pointer;
+  }
+  .Genre {
+    cursor: pointer;
   }
 }
