--- a/src/style/Main.scss
+++ b/src/style/Main.scss
@@ -1,19 +1,23 @@
 .SiteFrame {
-  width: 1280px;
   margin: auto;
-  border: black solid 1px;
-
   -ms-user-select: none;
   -moz-user-select: -moz-none;
   -khtml-user-select: none;
   -webkit-user-select: none;
   user-select: none;
 
+  .SiteHeadWrap {
+    display: flex;
+    justify-content: center;
+    background-color: #96dbfc;
+  }
+
   .SiteHead {
+    width: 1280px;
+    background-color: #96dbfc;
     position: relative;
     display: flex;
-    height: 200px;
-    width: 100%;
+    height: 150px;
     align-items: center;
     justify-content: center;
 
@@ -21,27 +25,19 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      border: black solid 1px;
       position: absolute;
       left: 7%;
-      //top: 50%;
-      height: 52px;
       width: 228px;
     }
     .Input {
-      border: black solid 1px;
       position: absolute;
-      //margin-inline: 55px;
-      height: 52px;
-      //top: 50%;
-      left: 31%;
+      top: 35px;
+      left: 32%;
 
       .InputBar {
         margin: 1px;
         width: 460px;
-        font-size: 21px;
         font-weight: bold;
-        padding: 11px;
         vertical-align: middle;
       }
       .InputButton {
@@ -54,43 +50,50 @@
       display: flex;
       align-items: center;
       height: 54px;
-      //top: 50%;
       left: 77%;
       position: absolute;
 
       .UserThumb {
-        height: 54px;
-        border-radius: 27px;
-        margin-right: 5px;
+        height: 40px;
+        border-radius: 20px;
+        margin-right: 10px;
       }
     }
     .GoogleLoginButton {
-      //top: 53%;
       right: 8%;
       position: absolute;
     }
     .SearchRegionSelector {
       position: absolute;
       top: 65%;
-      left: 31%;
+      left: 32%;
 
       .RegionResetButton {
         position: absolute;
-        top: 42px;
+        top: 48px;
         right: -60px;
       }
     }
   }
 
+  .SiteBodyWrap {
+    background-color: #e1e2e1;
+    display: flex;
+    justify-content: center;
+  }
+
   .SiteBody {
+    width: 1280px;
+    background-color: #e1e2e1;
+    min-height: 100vh;
     .SearchList {
-      border: black solid 1px;
+      background-color: #f5f5f6;
       text-align: left;
-      margin-top: 20px;
       margin-left: 20px;
       margin-right: 20px;
-      //margin-bottom: 10px;
-      padding-top: 10px;
+      margin-bottom: 10px;
+      border-top: #e1e2e1 solid 10px;
+      padding-top: 20px;
       padding-bottom: 10px;
       padding-inline: 20px;
 
@@ -98,7 +101,6 @@
     }
     .SearchPager {
       text-align: center;
-      //height: 20px;
 
       .SearchPageButton {
         width: 24px;
