--- a/src/style/Modal.scss
+++ b/src/style/Modal.scss
@@ -15,10 +15,12 @@
   left: 50%;
   transform: translate(-50%, -50%);
   max-width: 100%;
-  width: 800px;
+  width: 600px;
   .content {
     background: white;
     border-radius: 5px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+    padding-top: 10px;
+    padding-bottom: 10px;
   }
 }
