--- a/src/style/Mypage.scss
+++ b/src/style/Mypage.scss
@@ -1,5 +1,5 @@
 .Mypage {
-  border: black solid 1px;
+  background-color: #f5f5f6;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -12,9 +12,6 @@
   padding-bottom: 10px;
 
   .UserInfo {
-    // display: flex;
-    // flex-direction: column;
-    // align-items: flex-start;
     display: grid;
     width: 246px;
     height: 120px;
