--- a/src/style/App.scss
+++ b/src/style/App.scss
@@ -1,6 +1,10 @@
 .App {
   background-color: #f5f5f5;
 
+  h2 {
+    font-size: xx-large;
+  }
+
   .css-kt6w9b {
     display: block;
     margin: auto;
