--- a/src/style/Main.scss
+++ b/src/style/Main.scss
@@ -16,23 +16,20 @@
     width: 1280px;
     background-color: #96dbfc;
     position: relative;
-    display: flex;
     height: 150px;
-    align-items: center;
-    justify-content: center;
+    margin: 0 auto;
 
     .SiteName {
-      display: flex;
-      justify-content: center;
-      align-items: center;
       position: absolute;
-      left: 7%;
+      top: 35px;
+      left: 95px;
       width: 228px;
+      font-size: xx-large;
     }
     .Input {
       position: absolute;
       top: 35px;
-      left: 32%;
+      left: 408px;
 
       .InputBar {
         margin: 1px;
@@ -49,8 +46,10 @@
     .UserInfoBox {
       display: flex;
       align-items: center;
-      height: 54px;
-      left: 77%;
+      height: 52px;
+      width: 205px;
+      top: 50px;
+      left: 1000px;
       position: absolute;
 
       .UserThumb {
@@ -60,13 +59,15 @@
       }
     }
     .GoogleLoginButton {
-      right: 8%;
+      top: 50px;
+      left: 1000px;
       position: absolute;
     }
     .SearchRegionSelector {
       position: absolute;
-      top: 65%;
-      left: 32%;
+      top: 97px;
+      left: 409px;
+      width: 461px;
 
       .RegionResetButton {
         position: absolute;
@@ -79,13 +80,13 @@
   .SiteBodyWrap {
     background-color: #e1e2e1;
     display: flex;
-    justify-content: center;
   }
 
   .SiteBody {
     width: 1280px;
     background-color: #e1e2e1;
     min-height: 100vh;
+    margin: 0 auto;
     .SearchList {
       background-color: #f5f5f6;
       text-align: left;
