디자인 수정, 기능 버그 수정
글꼴적용, 글꼴크기 적용, 메인 아이콘 적용 버튼 레이아웃 수정
마이페이지에서 description 못불러오는 현상 수정
도서관 정보 스크랩 가능하도록 수정
header 레이아웃 수정
로그인 실패 모달 확인 버튼 텍스트 안나오는 버그 수정

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
+@font-face {
+  font-family: "NanumSquareLight";
+  src: url("./style/font/NanumSquareL.ttf") format("truetype");
+}
+
 body {
   overflow-y: overlay;
   margin: 0;
