--- a/src/style/Main.scss
+++ b/src/style/Main.scss
@@ -17,23 +17,33 @@
     width: 1280px;
     background-color: #96dbfc;
     position: relative;
-    height: 150px;
+    height: 160px;
     margin: 0 auto;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 
     .SiteName {
-      position: absolute;
-      top: 35px;
-      left: 95px;
-      width: 228px;
+      display: flex;
+      margin-left: 50px;
+      width: 270px;
       font-size: xx-large;
+      cursor: pointer;
+      align-items: center;
+      line-height: 120%;
+      font-family: "NanumSquareLight";
+
+      .SiteIcon {
+        width: 70px;
+        margin-right: 20px;
+      }
     }
     .Input {
-      position: absolute;
-      top: 35px;
-      left: 408px;
+      height: 94px;
 
       .InputBar {
         margin: 1px;
+        margin-bottom: 1px;
         width: 460px;
         font-weight: bold;
         vertical-align: middle;
@@ -43,15 +53,24 @@
         width: 57px;
         vertical-align: middle;
       }
+      .SearchRegionSelector {
+        width: 461px;
+        margin-top: -15px;
+
+        .RegionSelectButton {
+          margin: 5px;
+          margin-top: 0px;
+          margin-right: 0px;
+        }
+      }
     }
     .UserInfoBox {
       display: flex;
       align-items: center;
       height: 52px;
-      width: 205px;
-      top: 50px;
-      left: 1000px;
-      position: absolute;
+      width: 240px;
+      margin-right: 50px;
+      cursor: pointer;
 
       .UserThumb {
         height: 40px;
@@ -60,21 +79,8 @@
       }
     }
     .GoogleLoginButton {
-      top: 50px;
-      left: 1000px;
-      position: absolute;
-    }
-    .SearchRegionSelector {
-      position: absolute;
-      top: 97px;
-      left: 409px;
-      width: 461px;
-
-      .RegionResetButton {
-        position: absolute;
-        top: 48px;
-        right: -60px;
-      }
+      margin-left: 32px;
+      margin-right: 80px;
     }
   }
 
@@ -111,5 +117,16 @@
         padding: 0px;
       }
     }
+  }
+
+  .SiteFooter {
+    background-color: #252525;
+    display: flex;
+    align-items: center;
+    height: 50px;
+    justify-content: center;
+    text-align: center;
+    font-size: 12px;
+    color: #f5f5f6;
   }
 }
