--- a/src/style/Main.scss
+++ b/src/style/Main.scss
@@ -9,13 +9,13 @@
   .SiteHeadWrap {
     display: flex;
     justify-content: center;
-    background-color: #96dbfc;
+    background-color: #b2e3fd;
     min-width: 1280px;
   }
 
   .SiteHead {
     width: 1280px;
-    background-color: #96dbfc;
+    background-color: #b2e3fd;
     position: relative;
     height: 160px;
     margin: 0 auto;
