로그인 정보 날개메뉴 구현
mouse enter 시 메뉴 펼쳐짐
mypage 레이아웃 편집
SearchHistory 별도 구현
스타일 수정

--- a/src/style/Mypage.scss
+++ b/src/style/Mypage.scss
@@ -1,7 +1,7 @@
 .Mypage {
-  background-color: #f5f5f6;
+  background-color: #ffffff;
   display: flex;
-  justify-content: center;
+  //justify-content: center;
   align-items: center;
   flex-direction: column;
   margin-top: 20px;
@@ -10,11 +10,16 @@
   margin-bottom: 10px;
   padding-top: 10px;
   padding-bottom: 10px;
+  position: absolute;
+  height: 400px;
+  width: 340px;
+  left: 70%;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+  border-radius: 10px;
 
   .UserInfo {
     display: grid;
     width: 246px;
-    height: 120px;
     grid-template-columns: 1fr;
     justify-items: start;
     align-items: center;
@@ -22,7 +27,6 @@
 
   .UpdateInfo {
     display: grid;
-    height: 120px;
     grid-template-columns: 50px 1fr;
     justify-items: start;
     align-items: center;
