디자인 수정
추가된 요소 디자인 적용
메인 검색창 길이 수정(검색지역변경 UI에 맞춰 길이수정)
대출순위, 베스트셀러순위 scss 분리
BookInfo inline css 에서 scss로 이동

--- a/src/style/BookList.scss
+++ b/src/style/BookList.scss
@@ -3,6 +3,16 @@
   width: 1200px;
   align-items: flex-start;
 
+  .BookInfo {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    min-height: 125px;
+    margin-top: 10px;
+    background-color: #ffffff;
+    cursor: pointer;
+  }
+
   .BookImg {
     max-width: 82px;
     margin-left: 2px;
