--- a/src/style/LibraryRank.scss
+++ b/src/style/LibraryRank.scss
@@ -1,4 +1,4 @@
-.BestsellerList {
+.LibraryRank {
   background-color: #f5f5f6;
   text-align: left;
   min-height: 306px;
@@ -12,7 +12,7 @@
   padding-inline: 20px;
   list-style-type: none;
 
-  .BestsellerHeader {
+  .LibraryRankHeader {
     display: flex;
 
     .RefreshButton {
