--- a/src/style/Main.scss
+++ b/src/style/Main.scss
@@ -43,8 +43,7 @@
 
       .InputBar {
         margin: 1px;
-        margin-bottom: 1px;
-        width: 460px;
+        width: 484px;
         font-weight: bold;
         vertical-align: middle;
       }
@@ -54,8 +53,11 @@
         vertical-align: middle;
       }
       .SearchRegionSelector {
-        width: 461px;
         margin-top: -15px;
+
+        span {
+          cursor: pointer;
+        }
 
         .RegionSelectButton {
           margin: 5px;
@@ -93,6 +95,7 @@
     background-color: #e1e2e1;
     min-height: 100vh;
     margin: 0 auto;
+
     .SearchList {
       background-color: #f5f5f6;
       text-align: left;
