--- a/src/style/Main.scss
+++ b/src/style/Main.scss
@@ -72,6 +72,7 @@
       height: 52px;
       width: 240px;
       margin-right: 50px;
+      cursor: pointer;
 
       .UserThumb {
         height: 40px;
@@ -131,4 +132,13 @@
     font-size: 12px;
     color: #f5f5f6;
   }
+}
+
+.UserInfoMenuWrap {
+  //background: rgba(0, 0, 0, 0.25);
+  position: fixed;
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 100%;
 }
