--- a/src/style/Mypage.scss
+++ b/src/style/Mypage.scss
@@ -1,31 +1,31 @@
 .Mypage {
   background-color: #ffffff;
   display: flex;
-  //justify-content: center;
   align-items: center;
   flex-direction: column;
-  margin-top: 20px;
-  margin-left: 20px;
-  margin-right: 20px;
-  margin-bottom: 10px;
   padding-top: 10px;
   padding-bottom: 10px;
   position: absolute;
-  height: 400px;
-  width: 340px;
-  left: 70%;
+  height: 430px;
+  width: 400px;
+  top: 110px;
+  left: 900px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
   border-radius: 10px;
 
   .UserInfo {
     display: grid;
-    width: 246px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    min-width: 250px;
     grid-template-columns: 1fr;
     justify-items: start;
     align-items: center;
   }
 
   .UpdateInfo {
+    margin-top: 10px;
+    margin-bottom: 10px;
     display: grid;
     grid-template-columns: 50px 1fr;
     justify-items: start;
@@ -33,7 +33,7 @@
   }
 
   .GoogleLogoutButton {
-    margin: 10px;
+    margin: 25px;
   }
 
   .MypageSelectBox {
