--- a/src/style/Mypage.scss
+++ b/src/style/Mypage.scss
@@ -18,6 +18,7 @@
     margin-top: 10px;
     margin-bottom: 10px;
     min-width: 250px;
+    height: 140px;
     grid-template-columns: 1fr;
     justify-items: start;
     align-items: center;
@@ -26,6 +27,7 @@
   .UpdateInfo {
     margin-top: 10px;
     margin-bottom: 10px;
+    height: 140px;
     display: grid;
     grid-template-columns: 50px 1fr;
     justify-items: start;
