--- a/src/style/LibraryRank.scss
+++ b/src/style/LibraryRank.scss
@@ -16,7 +16,10 @@
     display: flex;
 
     .RefreshButton {
+      margin-top: 3px;
       margin-left: 30px;
+      font-size: 20px;
+      cursor: pointer;
     }
   }
 
