--- a/src/style/Mypage.scss
+++ b/src/style/Mypage.scss
@@ -7,9 +7,9 @@
   padding-bottom: 10px;
   position: absolute;
   height: 430px;
-  width: 400px;
+  //width: 400px;
   top: 110px;
-  left: 900px;
+  right: 48px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
   border-radius: 10px;
 
@@ -17,6 +17,7 @@
     display: grid;
     margin-top: 10px;
     margin-bottom: 10px;
+    padding-inline: 20px;
     min-width: 250px;
     height: 140px;
     grid-template-columns: 1fr;
@@ -27,6 +28,7 @@
   .UpdateInfo {
     margin-top: 10px;
     margin-bottom: 10px;
+    padding-inline: 20px;
     height: 140px;
     display: grid;
     grid-template-columns: 50px 1fr;
